feat: Worksの更新&デザインの変更

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - "3002:3002"
     environment:
       - NODE_ENV=development
-    env_file: .env
+    env_file: .env.local
     volumes:
     - ./:/usr/src/app
     command: sh -c "cd portfolio && npm start"
