--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"check": "yarn biome check --write"
 	},
 	"dependencies": {
+		"@nuxt/ui": "^2.21.0",
 		"nuxt": "^3.15.4",
 		"vue": "latest",
 		"vue-router": "latest"
