--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@nuxt/ui": "^2.21.0",
+		"@nuxtjs/tailwindcss": "^6.13.1",
 		"nuxt": "^3.15.4",
 		"vue": "latest",
 		"vue-router": "latest"
