--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"preview": "nuxt preview",
 		"postinstall": "nuxt prepare",
 		"check": "yarn biome check --write",
-		"format": "yarn biome format --write"
+		"format": "yarn biome format --write",
+		"e2e": "playwright test",
+		"e2e:ui": "playwright test --ui-port=8080 --ui-host=0.0.0.0"
 	},
 	"dependencies": {
 		"@nuxt/ui": "^2.21.0",
