--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
 		"e2e:ui": "playwright test --ui-port=8080 --ui-host=0.0.0.0"
 	},
 	"dependencies": {
-		"@nuxt/ui": "^2.21.0",
-		"@nuxtjs/tailwindcss": "^6.13.1",
+		"@nuxt/ui": "^3.1.1",
+		"@nuxtjs/tailwindcss": "^6.14.0",
 		"nuxt": "^3.15.4",
 		"vue": "latest",
-		"vue-router": "latest"
+		"vue-router": "^4.5.1"
 	},
 	"packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
 	"devDependencies": {
